--- a/styles.css
+++ b/styles.css
@@ -79,12 +79,13 @@ body {
   bottom: 20px;
   width: 174px;
   height: 56px;
-  padding: 12px 18px;
+  padding: 12px 16px;
   font-weight: 500;
   background-color: #fce000;
   border: none;
   border-radius: 16px;
-  font-size: 16px;
+  font-size: 14px;
+  color: black;
   cursor: pointer;
   transition: background-color 0.3s ease;
   left: 50%;
